8.2048/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: game-service
spec:
  selector: 
    app: game
  type: NodePort
  ports:
    - protocol: "TCP"
      port: 8080
      targetPort: 80
