8.2048/kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-resource-game
  namespace: default
spec:
  rules:
  - host: "game.2048.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: game-service
            port: 
              number: 8080
